# net-chat

./: Cargo.toml  README.md  big_file.txt  medium_file.txt  test_file.txt
docs/: 1.md  2.md  3.md  4.md  5.md  6.md
src/: client.rs  common.rs  lib.rs  main.rs  server.rs  server_test.rs  udp.rs
src/tests/: integration_tests.rs
tests/: integration_tests.rs
