[package]
name = "net-chat"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Cierco"]

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
rand = "0.8.4"
log = "0.4.22"
env_logger = "0.11.5"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
