[package]
name = "net-chat"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Cierco"]

[dependencies]
log = "0.4.22"
env_logger = "0.11.5"
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
ctrlc = "3.2"
tempfile = "3.13.0"

[[test]]
name = "integration"
path = "tests/integration_tests.rs"

[lib]
name = "net_chat"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/main.rs"
